@@ -4,7 +4,8 @@ require '-test-/debug'
 class SampleClassForTestProfileFrames
   class Sample2
     def baz(block)
-      block.call
+      instance_eval "def zab(block) block.call end"
+      [self, zab(block)]
     end
   end
 
@@ -19,12 +20,13 @@ end
 
 class TestProfileFrames < Test::Unit::TestCase
   def test_profile_frames
-    frames = Fiber.new{
+    obj, frames = Fiber.new{
       Fiber.yield SampleClassForTestProfileFrames.new.foo(lambda{ Bug::Debug.profile_frames(0, 10) })
     }.resume
 
     labels = [
       "block (2 levels) in test_profile_frames",
+      "zab",
       "baz",
       "bar",
       "foo",
@@ -32,6 +34,7 @@ class TestProfileFrames < Test::Unit::TestCase
     ]
     base_labels = [
       "test_profile_frames",
+      "zab",
       "baz",
       "bar",
       "foo",
@@ -39,6 +42,7 @@ class TestProfileFrames < Test::Unit::TestCase
     ]
     full_labels = [
       "block (2 levels) in TestProfileFrames#test_profile_frames",
+      "#{obj.inspect}.zab",
       "SampleClassForTestProfileFrames::Sample2#baz",
       "SampleClassForTestProfileFrames.bar",
       "SampleClassForTestProfileFrames#foo",
@@ -46,16 +50,18 @@ class TestProfileFrames < Test::Unit::TestCase
     ]
     classes = [
       TestProfileFrames,
+      obj,
       SampleClassForTestProfileFrames::Sample2,
       SampleClassForTestProfileFrames, # singleton method
       SampleClassForTestProfileFrames,
       TestProfileFrames,
     ]
     singleton_method_p = [
-      false, false, true, false, false, false,
+      false, true, false, true, false, false, false,
     ]
     method_names = [
       "test_profile_frames",
+      "zab",
       "baz",
       "bar",
       "foo",
@@ -63,11 +69,14 @@ class TestProfileFrames < Test::Unit::TestCase
     ]
     qualified_method_names = [
       "TestProfileFrames#test_profile_frames",
+      "#{obj.inspect}.zab",
       "SampleClassForTestProfileFrames::Sample2#baz",
       "SampleClassForTestProfileFrames.bar",
       "SampleClassForTestProfileFrames#foo",
       "TestProfileFrames#test_profile_frames",
     ]
+    paths = [ file=__FILE__, "(eval)", file, file, file, file ]
+    absolute_paths = [ file, nil, file, file, file, file ]
 
     # pp frames
 
@@ -76,15 +85,15 @@ class TestProfileFrames < Test::Unit::TestCase
     frames.each.with_index{|(path, absolute_path, label, base_label, full_label, first_lineno,
                             classpath, singleton_p, method_name, qualified_method_name), i|
       err_msg = "#{i}th frame"
-      assert_equal(__FILE__, path, err_msg)
-      assert_equal(__FILE__, absolute_path, err_msg)
+      assert_equal(paths[i], path, err_msg)
+      assert_equal(absolute_paths[i], absolute_path, err_msg)
       assert_equal(labels[i], label, err_msg)
       assert_equal(base_labels[i], base_label, err_msg)
-      assert_equal(full_labels[i], full_label, err_msg)
-      assert_equal(classes[i].to_s, classpath, err_msg)
       assert_equal(singleton_method_p[i], singleton_p, err_msg)
       assert_equal(method_names[i], method_name, err_msg)
-      assert_equal(qualified_method_names[i], qualified_method_name, err_msg)
+      assert_match(qualified_method_names[i], qualified_method_name, err_msg)
+      assert_match(full_labels[i], full_label, err_msg)
+      assert_match(classes[i].inspect, classpath, err_msg)
       if label == method_name
         c = classes[i]
         m = singleton_p ? c.method(method_name) : c.instance_method(method_name)
